# ESKF

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
eigen/: .hg_archival.txt  Array.h  Cholesky.h  Core.h  Dense.h  Eigenvalues.h  Geometry.h  Householder.h  Jacobi.h  LU.h  QR.h  SVD.h
eigen/src/Cholesky/: LDLT.h  LLT.h  LLT_MKL.h
eigen/src/Core/: Array.h  ArrayBase.h  ArrayWrapper.h  Assign.h  Assign_MKL.h  BandMatrix.h  Block.h  BooleanRedux.h  CommaInitializer.h  CoreIterators.h  CwiseBinaryOp.h  CwiseNullaryOp.h  CwiseUnaryOp.h  CwiseUnaryView.h  DenseBase.h  DenseCoeffsBase.h  DenseStorage.h  Diagonal.h  DiagonalMatrix.h  DiagonalProduct.h  Dot.h  EigenBase.h  Flagged.h  ForceAlignedAccess.h  Functors.h  Fuzzy.h  GeneralProduct.h  GenericPacketMath.h  GlobalFunctions.h  IO.h  Map.h  MapBase.h  MathFunctions.h  Matrix.h  MatrixBase.h  NestByValue.h  NoAlias.h  NumTraits.h  PermutationMatrix.h  PlainObjectBase.h  (+20 more)
eigen/src/Jacobi/: Jacobi.h
include/: ESKF.h  ESKF.hpp  lTime.h  lightDuration.h  lightTime.h  parseDataFiles.h  unrolledFPFt.h
src/: ESKF.cpp  main.cpp  parseDataFiles.cpp
timeSeries/gentleWave/: mocapTimeSeries.txt
timeSeries/hardWave/: mocapTimeSeries.txt
timeSeries/shakeWave/: mocapTimeSeries.txt
timeSeries/stationary/: mocapTimeSeries.txt
timeSeriesNov/gentleWave/: mocapTimeSeries.txt
timeSeriesNov/hardConWave/: mocapTimeSeries.txt
timeSeriesNov/hardWave/: mocapTimeSeries.txt
timeSeriesNov/shakeWave/: mocapTimeSeries.txt
timeSeriesNov/stationary/: mocapTimeSeries.txt
tools/: JosephFormUnroll.py  unrolledJoseph.h
(+91 files in other folders)
